--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* =========
    Get Fonts */
 @import url(http://fonts.googleapis.com/css?family=Quicksand);
-@import url(http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+/* @import url(http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css); */
 /* ================
    Assign Variables */
 /* ===========================
